src/test/deca/syntax/invalid/renduInter01/02missing_condition_if.deca
// Description:
//      Programme lexicalement incorrect
//      => une instruction conditionnelle if...else doit posséder une condition de départ "if (condition) { ... } else { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token ')' inattendu

{
    int x = 4;
    if ( ) {
        println("hello if", x);
    } else {
        println("hello else_if2 : ", x);
    }

}
